--- a/roles/radsecproxy/templates/radsecproxy.conf.j2
+++ b/roles/radsecproxy/templates/radsecproxy.conf.j2
@@ -56,10 +56,10 @@ rewrite defaultclient {
     removeAttribute 81
 }
 
-#client 127.0.0.1 {
-# type  udp
-# secret  testing123
-#}
+client 127.0.0.1 {
+ type  udp
+ secret  testing123
+}
 
 #client ::1 {
 # type udp
@@ -86,13 +86,6 @@ rewrite defaultclient {
 # matchcertificateattribute SubjectAltName:URI:/^https://registry.edugain.org/resolver\?urn=urn:geant:eduroam:component:(sp|proxy|confederation-root):.*$/
 #}
 
-# incoming European eduroam Confederation monitoring. Negotiate shared secret with SRCE.
-
-client SA5-monitoring-incoming {
- host {{ monitoring.host }}
- type UDP
- secret {{ monitoring_secret }}
-}
 
 # list RADIUS servers of your connected realms below.
 
@@ -237,6 +230,27 @@ client SA5-monitoring-incoming {
 
 # Monitoring Server
 # Negotiate a shared secret with the monitoring team at SRCE
+
+# incoming European eduroam Confederation monitoring. Negotiate shared secret with SRCE.
+
+#client SA5-monitoring {
+# host {{ monitoring.host }}
+# type UDP
+# secret {{ monitoring_secret }}
+#}
+
+#server SA5-monitoring {
+# host {{ monitoring.host }}
+# type UDP
+# secret {{ monitoring_secret }}
+#}
+
+client SA5-monitoring-incoming {
+ host {{ monitoring.host }}
+ type UDP
+ secret {{ monitoring_secret }}
+}
+
 server SA5-monitoring-outgoing {
  host {{ monitoring.host }}
  type UDP
@@ -341,6 +355,7 @@ realm /^$ {
 # RADIUS.
 
 realm {{ monitoring.realm }} {
+ #server SA5-monitoring
  server SA5-monitoring-outgoing
 }
 
