Enable FTicks Monitoring

--- a/roles/radsecproxy/templates/radsecproxy.conf.j2
+++ b/roles/radsecproxy/templates/radsecproxy.conf.j2
@@ -2,8 +2,8 @@ ListenUDP   *:1812
 #ListenTCP    *:2083
 
 LogLevel    3
-LogDestination    file:///var/log/radsecproxy.log
-
+#LogDestination    file:///var/log/radsecproxy.log
+LogDestination    x-syslog:///LOG_LOCAL0
 
 # For generating log entries conforming to the F-Ticks system, specify
 # FTicksReporting with one of the following values.
@@ -32,6 +32,7 @@ FTicksMAC VendorKeyHashed
 # FTicksKey <key>
 FTicksKey {{ fticks_salt }}
 
+#FTicksSyslogFacility  x-syslog:///LOG_LOCAL1
 
 # give RADIUS client and server stanzas the same identifier if they are the same
 # entity. In this case, misconfigured clients can automatically be prevented
@@ -148,6 +149,7 @@ client 127.0.0.1 {
     host          {{ institution.host }}
     type          UDP
     secret        {{ institution.secret }}
+    FTicksVISCOUNTRY {{ tld | upper }}
   }
 
   server {{ institution.name }} {
