Log LOCAL3 to /var/log/radsecproxy.log; Move SA5-monitoring-incoming higher up in the radsecproxy config file

--- a/roles/radsecproxy/templates/rsyslog-radsecproxy.conf.j2
+++ b/roles/radsecproxy/templates/rsyslog-radsecproxy.conf.j2
@@ -1,5 +1,8 @@
 # radsecproxy
 
+local3.*                -/var/log/radsecproxy.log
+local4.*                -/var/log/fticks.log
+
 if      ($programname == 'radsecproxy') and ($msg contains 'F-TICKS') \
 then    @{{ fticks_server }}
 &       ~
